deployment/k8s/dev/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: veriforgeops-dev
  labels:
    name: veriforgeops-dev
    app: veriforge-ops
