deployment/k8s/dev/backend-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: veriforgeops-dev
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  selector:
    app: backend
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
