deployment/k8s/dev/frontend-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: veriforgeops-dev
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
