deployment/k8s/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veriforgeops-dev-ingress
  namespace: veriforgeops-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "veriforgeops-dev-static-ip"
    networking.gke.io/managed-certificates: "veriforgeops-dev-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "veriforgeops-dev-frontend-config"
spec:
  rules:
  - host: veriforgeops-dev.34.54.80.139.nip.io
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: 34.54.80.139.nip.io
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: veriforgeops-dev.endpoints.cog01k24f1ea555zdv7ynzthxanz5.cloud.goog
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
